[gd_scene load_steps=9 format=3 uid="uid://rukcl2t6m65y"]

[ext_resource type="Script" uid="uid://i3fhhgx36b25" path="res://weapon_manager.gd" id="1_8u6fj"]
[ext_resource type="Texture2D" uid="uid://jr2umhv5muw0" path="res://weapons/weapon_1.png" id="2_ud4p6"]
[ext_resource type="Texture2D" uid="uid://cdj13y2012ymi" path="res://weapons/weapon_2.png" id="3_j8p0c"]
[ext_resource type="Texture2D" uid="uid://cx21jdet3qokd" path="res://weapons/weapon_3.png" id="4_dt1gt"]
[ext_resource type="Texture2D" uid="uid://cxmq5fjqwlkdx" path="res://weapons/weapon_4.png" id="5_x1hkb"]

[sub_resource type="Animation" id="Animation_kgsr0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/WeaponSelector/Weapon1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/WeaponSelector/Weapon2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/WeaponSelector/Weapon3:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/WeaponSelector/Weapon4:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_lqhhv"]
resource_name = "weapons_appear"
length = 0.38
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/WeaponSelector/Weapon1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.38),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/WeaponSelector/Weapon2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.38),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/WeaponSelector/Weapon3:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.38),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/WeaponSelector/Weapon4:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.38),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xjpc8"]
_data = {
&"RESET": SubResource("Animation_kgsr0"),
&"weapons_appear": SubResource("Animation_lqhhv")
}

[node name="WeaponManager" type="Node"]
script = ExtResource("1_8u6fj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="WeaponSelector" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Weapon1" type="TextureButton" parent="CanvasLayer/WeaponSelector"]
layout_mode = 0
offset_left = 646.0
offset_top = 67.0
offset_right = 746.0
offset_bottom = 167.0
texture_normal = ExtResource("2_ud4p6")

[node name="Weapon2" type="TextureButton" parent="CanvasLayer/WeaponSelector"]
layout_mode = 0
offset_left = 790.0
offset_top = 204.0
offset_right = 890.0
offset_bottom = 304.0
texture_normal = ExtResource("3_j8p0c")

[node name="Weapon3" type="TextureButton" parent="CanvasLayer/WeaponSelector"]
layout_mode = 0
offset_left = 643.0
offset_top = 357.0
offset_right = 743.0
offset_bottom = 457.0
texture_normal = ExtResource("4_dt1gt")

[node name="Weapon4" type="TextureButton" parent="CanvasLayer/WeaponSelector"]
layout_mode = 0
offset_left = 481.0
offset_top = 198.0
offset_right = 581.0
offset_bottom = 298.0
texture_normal = ExtResource("5_x1hkb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xjpc8")
}

[connection signal="mouse_entered" from="CanvasLayer/WeaponSelector/Weapon1" to="." method="_on_weapon_1_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/WeaponSelector/Weapon1" to="." method="_on_weapon_1_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/WeaponSelector/Weapon2" to="." method="_on_weapon_2_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/WeaponSelector/Weapon2" to="." method="_on_weapon_2_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/WeaponSelector/Weapon3" to="." method="_on_weapon_3_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/WeaponSelector/Weapon3" to="." method="_on_weapon_3_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/WeaponSelector/Weapon4" to="." method="_on_weapon_4_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/WeaponSelector/Weapon4" to="." method="_on_weapon_4_mouse_exited"]
